[project]
name = "quic-example"
version = "0.1.0"
description = ""
authors = [
    {name = "João Paulo Carvalho",email = "joao.paulo@vinta.com.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "quart (>=0.20.0,<0.21.0)",
    "hypercorn (>=0.17.3,<0.18.0)",
    "aioquic (>=1.2.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
